--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,27 +12,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-07 Wed 10:29]
+#+CAPTION: Clock summary at [2016-12-07 Wed 11:14]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:51* |       |       | 100.0 |
+| *Total time*                                                                | *35:34* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:51   |       |       | 100.0 |
-| Active                                                                      |         | 34:51 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   5.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   3.0 |
+| Stories                                                                     | 35:34   |       |       | 100.0 |
+| Active                                                                      |         | 35:34 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   5.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.9 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.5 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.6 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   3.1 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.5 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   3.0 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   3.3 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  12.4 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   3.6 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  15.2 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  16.5 |
-| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   3.4 |
-| COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   1.0 |
-| STARTED Add basic infrastructure for C#                                     |         |       | 10:21 |  29.7 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  12.2 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   3.5 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  14.9 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  16.1 |
+| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   3.3 |
+| COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.9 |
+| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   2.0 |
+| STARTED Add basic infrastructure for C#                                     |         |       | 10:21 |  29.1 |
 | STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -330,6 +331,14 @@ registrar.
 :    workflow::registrar().validate();
 
 When we add this back, validation fails.
+
+*** COMPLETED Move decoration repository to quilt                     :story:
+    CLOSED: [2016-12-07 Wed 11:14]
+    CLOCK: [2016-12-07 Wed 10:31]--[2016-12-07 Wed 11:14] =>  0:43
+
+At present the data directories and the decoration repository are
+created in =quilt.cpp=. We need to move it to =quilt= so that
+=quilt.csharp= can reuse it.
 
 *** STARTED Add basic infrastructure for C#                           :story:
     CLOCK: [2016-12-07 Wed 08:50]--[2016-12-07 Wed 10:30] =>  1:40
