--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,29 +12,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-07 Wed 12:15]
+#+CAPTION: Clock summary at [2016-12-07 Wed 12:41]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:34* |       |       | 100.0 |
+| *Total time*                                                                | *36:59* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:34   |       |       | 100.0 |
-| Active                                                                      |         | 36:34 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   5.1 |
+| Stories                                                                     | 36:59   |       |       | 100.0 |
+| Active                                                                      |         | 36:59 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   5.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.8 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.5 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.5 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.9 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   3.2 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  11.9 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  11.7 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   3.4 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  14.4 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  15.7 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  14.3 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  15.5 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   3.2 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.9 |
-| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   2.0 |
-| STARTED Add basic infrastructure for C#                                     |         |       | 11:21 |  31.0 |
-| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.5 |
+| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.9 |
+| STARTED Add basic infrastructure for C#                                     |         |       | 11:46 |  31.8 |
+| STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -341,6 +341,7 @@ created in =quilt.cpp=. We need to move it to =quilt= so that
 =quilt.csharp= can reuse it.
 
 *** STARTED Add basic infrastructure for C#                           :story:
+    CLOCK: [2016-12-07 Wed 12:16]--[2016-12-07 Wed 12:41] =>  0:25
     CLOCK: [2016-12-07 Wed 11:15]--[2016-12-07 Wed 12:15] =>  1:00
     CLOCK: [2016-12-07 Wed 08:50]--[2016-12-07 Wed 10:30] =>  1:40
     CLOCK: [2016-12-06 Tue 18:10]--[2016-12-06 Tue 18:21] =>  0:11
