--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,29 +12,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-07 Wed 13:51]
+#+CAPTION: Clock summary at [2016-12-07 Wed 14:08]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:42* |       |       | 100.0 |
+| *Total time*                                                                | *37:57* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:42   |       |       | 100.0 |
-| Active                                                                      |         | 37:42 |       | 100.0 |
+| Stories                                                                     | 37:57   |       |       | 100.0 |
+| Active                                                                      |         | 37:57 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   4.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.7 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.5 |
-| COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.5 |
+| COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.4 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.8 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   3.1 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  11.5 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  11.4 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   3.3 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  14.0 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  15.2 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  13.9 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  15.1 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   3.1 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.9 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.9 |
-| STARTED Move module id container into yarn                                  |         |       |  0:09 |   0.4 |
-| STARTED Add basic infrastructure for C#                                     |         |       | 12:20 |  32.7 |
+| COMPLETED Move module id container into yarn                                |         |       |  0:24 |   1.1 |
+| STARTED Add basic infrastructure for C#                                     |         |       | 12:20 |  32.5 |
 | STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -341,7 +341,9 @@ At present the data directories and the decoration repository are
 created in =quilt.cpp=. We need to move it to =quilt= so that
 =quilt.csharp= can reuse it.
 
-*** STARTED Move module id container into yarn                        :story:
+*** COMPLETED Move module id container into yarn                      :story:
+    CLOSED: [2016-12-07 Wed 14:07]
+    CLOCK: [2016-12-07 Wed 13:52]--[2016-12-07 Wed 14:07] =>  0:15
     CLOCK: [2016-12-07 Wed 13:42]--[2016-12-07 Wed 13:51] =>  0:09
 
 At present we are obtaining the set of module id's inside
