--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,29 +12,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-07 Wed 14:08]
+#+CAPTION: Clock summary at [2016-12-07 Wed 16:41]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:57* |       |       | 100.0 |
+| *Total time*                                                                | *39:13* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:57   |       |       | 100.0 |
-| Active                                                                      |         | 37:57 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   4.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.7 |
+| Stories                                                                     | 39:13   |       |       | 100.0 |
+| Active                                                                      |         | 39:13 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   4.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.6 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.5 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.4 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.8 |
-| COMPLETED Move project directory to output options                          |         |       |  1:10 |   3.1 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  11.4 |
-| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   3.3 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  13.9 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  15.1 |
-| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   3.1 |
-| COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.9 |
-| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.9 |
-| COMPLETED Move module id container into yarn                                |         |       |  0:24 |   1.1 |
-| STARTED Add basic infrastructure for C#                                     |         |       | 12:20 |  32.5 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.7 |
+| COMPLETED Move project directory to output options                          |         |       |  1:10 |   3.0 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  11.0 |
+| COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   3.2 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  13.5 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  14.6 |
+| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   3.0 |
+| COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.8 |
+| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.8 |
+| COMPLETED Move module id container into yarn                                |         |       |  0:24 |   1.0 |
+| STARTED Add basic infrastructure for C#                                     |         |       | 13:36 |  34.7 |
 | STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -351,6 +351,7 @@ At present we are obtaining the set of module id's inside
 move it up into yarn.
 
 *** STARTED Add basic infrastructure for C#                           :story:
+    CLOCK: [2016-12-07 Wed 15:25]--[2016-12-07 Wed 16:41] =>  1:16
     CLOCK: [2016-12-07 Wed 13:25]--[2016-12-07 Wed 13:41] =>  0:16
     CLOCK: [2016-12-07 Wed 12:42]--[2016-12-07 Wed 13:00] =>  0:18
     CLOCK: [2016-12-07 Wed 12:16]--[2016-12-07 Wed 12:41] =>  0:25
@@ -411,6 +412,14 @@ Tasks:
 
 - try using ICU DecNumber library.
 - check compiler support (MSVC may have decimals; if so, use that instead)
+
+*** Consider removing filtering ostream                               :story:
+
+Originally we added a boost based stream to handle
+indentation. However, since we moved over to stitch, there probably is
+no need to use it any longer. We need to investigate if the formatters
+model is making use of it (generating comments, namespaces, etc). If
+not, remove it.
 
 *** Knitting =quilt= does not work                                    :story:
 
