--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,29 +12,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-07 Wed 22:24]
+#+CAPTION: Clock summary at [2016-12-07 Wed 22:54]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *41:25* |       |       | 100.0 |
+| *Total time*                                                                | *41:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 41:25   |       |       | 100.0 |
-| Active                                                                      |         | 41:25 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   4.5 |
+| Stories                                                                     | 41:54   |       |       | 100.0 |
+| Active                                                                      |         | 41:54 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:51 |   4.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   2.5 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.4 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   1.3 |
-| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.6 |
+| COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   2.5 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.8 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  10.5 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |  10.3 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   3.0 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  12.8 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  13.8 |
-| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.9 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |  12.6 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |  13.7 |
+| COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.8 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.8 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.7 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   1.0 |
-| STARTED Add basic infrastructure for C#                                     |         |       | 15:48 |  38.1 |
+| STARTED Add basic infrastructure for C#                                     |         |       | 16:17 |  38.9 |
 | STARTED Add support for Decimal numbers                                     |         |       |  0:32 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -351,6 +351,7 @@ At present we are obtaining the set of module id's inside
 move it up into yarn.
 
 *** STARTED Add basic infrastructure for C#                           :story:
+    CLOCK: [2016-12-07 Wed 22:25]--[2016-12-07 Wed 22:54] =>  0:29
     CLOCK: [2016-12-07 Wed 21:19]--[2016-12-07 Wed 22:24] =>  1:05
     CLOCK: [2016-12-07 Wed 21:01]--[2016-12-07 Wed 21:18] =>  0:17
     CLOCK: [2016-12-07 Wed 17:15]--[2016-12-07 Wed 17:33] =>  0:18
